--- a/SKRIP.css
+++ b/SKRIP.css
@@ -1,11 +1,7 @@
 body{
 	background-color: #A0A1BA;
 	background-size: cover;
-}
-.navigasi{
-	background-color: #02438F; 
-	text-align: right;
-	background-size: cover;
+	font-family: sans-serif;
 }
 .about{
 	background-color: white; 
@@ -17,7 +13,30 @@ body{
 }
 a{
 	color: white;
+	text-decoration: none;
+	font-size: 20px;
+	font-family: sans-serif;
+	padding: 14px 10px;
+}
+ul{
+	padding: 14px;
+}
+li{
+	list-style: none;
+	display: inline;
+}
+li a{
+	background: #02438F;
+	color: white;
+}
+li a:hover{
+	background: #3169AA ; 
+	height: 50px;
 }
 header, article, footer{
 	text-align: center;
+}
+.navi{
+	background-color:#02438F;
+	height: 50px;
 }
